Added the help page

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,2 @@
 <h1>Contact</h1>
-<p>Contact Ruyb on Rails Tutorial about the sample app at the <a href="http://railstutorial.org">feedback page</a>.</p>
+<p>Contact Ruby on Rails Tutorial about the sample app at the <a href="http://railstutorial.org">feedback page</a>.</p>
