--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
 <h1>Sample App</h1>
 <p>This is the home page for the <a href="http://railstutorial.org">sample application</a></p>
+
+<%= link_to "Sign up now!", '#', :class => "signup_button round" %>
